keep the science

--- a/Science.ipynb
+++ b/Science.ipynb
@@ -48,6 +48,9 @@
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "git": {
+   "clear_outputs": false
+  },
   "kernelspec": {
    "display_name": "Python [conda env:three]",
    "language": "python",
